[workspace]
members = [
	"relay/common",
	"relay/common/slot_range_helper",
	"relay/runtimes/kusama",
	"relay/runtimes/kusama/constants",
	"relay/runtimes/metrics",
	"relay/runtimes/parachains",
	"relay/runtimes/polkadot",
	"relay/runtimes/polkadot/constants",
	"system-parachains/common",
	"system-parachains/common/pallets/collator-selection",
	"system-parachains/runtimes/asset-hubs/asset-hub-kusama",
	"system-parachains/runtimes/asset-hubs/asset-hub-polkadot",
	"system-parachains/runtimes/asset-hubs/common",
	"system-parachains/runtimes/asset-hubs/common/test-utils",
	"system-parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"system-parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"system-parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"system-parachains/runtimes/collectives/collectives-polkadot",
]

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot.git"
version = "1.0.0"
